Fixed CSS horizontal scrolling

--- a/public/css/attendee-home.css
+++ b/public/css/attendee-home.css
@@ -140,25 +140,28 @@ main {
 /* Cards container styled as horizontal scroll */
 .cards-wrapper {
     width: 100%;
-    height: 550px;
+    height: 520px;
     margin-top: 1rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* flex-direction: column; */
+    justify-content: flex-start;
+    align-items: flex-end;
     position: absolute;
     top: 38%;
-    left: 50%;
-    transform: translateX(-50%);
-    align-items: center;
-    overflow-x: scroll;
+    left: 0;
+    /* transform: translateX(-50%); */
+    overflow-x: auto;
     overflow-y: visible;
-
+    padding-left: 1rem;
 }
 
-.cards-container {
+.cards-wrapper::-webkit-scrollbar {
+    width: 0;
+}
+
+/* .cards-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     gap: 1rem;
     overflow-x: auto;
@@ -170,17 +173,18 @@ main {
 
 .cards-container::-webkit-scrollbar {
     display: none;
-}
+} */
 
 /* Each event card */
 .event-card {
-    width: 320px;
+    min-width: 320px;
     height: 400px;
     border-radius: 1rem;
     padding: 4rem 2rem 0;
     background-color: var(--light-grey);
     overflow-y: hidden;
     cursor: pointer;
+    margin-right: 2rem;
 
 }
 
@@ -194,6 +198,10 @@ main {
 .card-data {
     transform: translateY(17.2rem);
     text-align: center;
+    max-width: 340px;
+    white-space: normal;
+    word-wrap: break-word;
+    color: var(--dark-grey);
 }
 
 .event-title {
@@ -253,6 +261,7 @@ main {
 .event-card:hover .card-data {
     transform: translateY(8.8rem);
     height: fit-content;
+    color: var(--black);
 }
 
 .event-card:hover .event-title {
@@ -277,8 +286,6 @@ main {
     transition-delay: 0.2s;
     opacity: 1;
 }
-
-
 
 
 
